[package]
name = "vmread"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "High-level Rust bindings to vmread"
repository = "https://github.com/Heep042/vmread-rs"
homepage = "https://github.com/Heep042/vmread-rs"

[features]
default = ["vmread-sys"]
internal_rw = ["vmread-sys-internal"]
kmod_rw = ["vmread-sys-kmod"]

[dev-dependencies]
rand = "0.7.3"

[dependencies]
vmread-sys = { path="vmread-sys", optional = true }
vmread-sys-internal = { path="vmread-sys-internal", optional = true }
vmread-sys-kmod = { path="vmread-sys-kmod", optional = true }
libc = "0.2"

[workspace]
members = [
	"vmread-sys",
	"vmread-sys-internal",
	"vmread-sys-kmod"
]
