[package]
name = "vmread"
version = "0.1.5"
edition = "2018"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
description = "High-level Rust bindings to vmread"
homepage = "https://github.com/Heep042/vmread-rs"
repository = "https://github.com/Heep042/vmread-rs"
readme = "README.md"

[features]
default = ["vmread-sys"]
internal_rw = ["vmread-sys-internal", "libc"]
kmod_rw = ["vmread-sys-kmod"]

[dev-dependencies]
rand = "0.5"

[dependencies]
vmread-sys = { path="vmread-sys", version="0.1.5", optional = true }
vmread-sys-internal = { path="vmread-sys-internal", version="0.1.5", optional = true }
vmread-sys-kmod = { path="vmread-sys-kmod", version="0.1.5", optional = true }
libc = { version="0.2", optional = true }
smallvec = "1.2.0"

[workspace]
members = [
	"vmread-sys",
	"vmread-sys-internal",
	"vmread-sys-kmod"
]
