[package]
name = "vmread-sys-internal"
version = "0.1.2"
edition = "2018"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
description = "Raw FFI bindings to vmread (for internal_rw mode)"
homepage = "https://github.com/Heep042/vmread-rs/tree/master/vmread-sys"
repository = "https://github.com/Heep042/vmread-rs/"

[dependencies]
vmread-sys = { path="../vmread-sys", version = "0.1.2", features=["internal_rw"] }
