[package]
name = "vmread-sys"
version = "0.1.2"
links = "vmread"
build = "build.rs"
edition = "2018"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
description = "Raw FFI bindings to vmread"
homepage = "https://github.com/Heep042/vmread-rs/tree/master/vmread-sys-internal"
repository = "https://github.com/Heep042/vmread-rs/"
readme = "vmread/README.md"
exclude = ["vmread/rwperf.png"]

[features]
default = []
internal_rw = []
kmod_rw = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.53.1"
